tests/label/bad_expression.rs
use tear::twist;

fn bad_expression() {
	twist! { -label 'a | let }
}

fn main () {}